--- a/app/src/main/res/layout-v21/activity_medical_evaluation.xml
+++ b/app/src/main/res/layout-v21/activity_medical_evaluation.xml
@@ -42,10 +42,10 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:paddingRight="16dp"
                 android:paddingStart="10dp"
-                android:paddingEnd="16dp">
+                android:paddingLeft="10dp"
+                android:paddingEnd="16dp"
+                android:paddingRight="16dp">
 
                 <ImageView
                     android:id="@+id/imgPerroEvaluacion"
@@ -64,11 +64,11 @@
                     android:layout_marginStart="-80dp"
                     android:layout_marginLeft="-90dp"
                     android:layout_marginTop="100dp"
+                    android:layout_toEndOf="@+id/imgPerroEvaluacion"
                     android:layout_toRightOf="@+id/imgPerroEvaluacion"
                     android:background="@drawable/input"
                     android:contentDescription="@string/desc"
-                    app:srcCompat="@drawable/camara"
-                    android:layout_toEndOf="@+id/imgPerroEvaluacion" />
+                    app:srcCompat="@drawable/camara" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -76,28 +76,27 @@
             android:id="@+id/lblMascotaEvaluacion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:text="@string/descripcionGeneral"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry"
-            android:paddingStart="5dp" />
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="10dp"
             android:paddingEnd="10dp"
-            android:paddingStart="5dp">
+            android:paddingRight="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/eTMLEstadoInicial"
@@ -105,27 +104,26 @@
                     android:layout_height="match_parent"
                     android:hint="@string/describa"
                     android:inputType="textMultiLine"
+                    android:paddingStart="5dp"
                     android:paddingLeft="5dp"
                     android:textSize="12sp"
-                    tools:ignore="RtlSymmetry"
-                    android:paddingStart="5dp" />
+                    tools:ignore="RtlSymmetry" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtEdadEvaluacion"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/edad_aproximada"
+                    android:paddingStart="5dp"
                     android:paddingLeft="5dp"
                     android:textSize="12sp"
-                    tools:ignore="RtlSymmetry"
-                    android:paddingStart="5dp" />
+                    tools:ignore="RtlSymmetry" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -137,24 +135,24 @@
             android:id="@+id/lblFracturas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:text="@string/fracturas"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry"
-            android:paddingStart="5dp" />
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
             android:orientation="horizontal"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp">
 
             <RadioGroup
                 android:layout_width="68dp"
@@ -178,8 +176,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/eTMTFracturas"
@@ -191,12 +188,12 @@
                     android:gravity="start|top"
                     android:hint="@string/describa"
                     android:inputType="textMultiLine"
+                    android:paddingStart="5dp"
                     android:paddingLeft="5dp"
                     android:paddingTop="10dp"
                     android:paddingEnd="10dp"
                     android:paddingRight="10dp"
-                    android:textSize="12sp"
-                    android:paddingStart="5dp" />
+                    android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -205,24 +202,24 @@
             android:id="@+id/lblTipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:text="@string/tipo"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry"
-            android:paddingStart="5dp" />
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:orientation="horizontal"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp">
 
             <RadioGroup
                 android:layout_width="wrap_content"
@@ -297,23 +294,23 @@
             android:id="@+id/lblMedicamentos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:text="@string/medicamentos"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:ignore="RtlSymmetry"
-            android:paddingStart="5dp" />
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
-            android:paddingRight="20dp"
-            android:paddingStart="5dp"
-            android:paddingEnd="20dp">
+            android:paddingEnd="20dp"
+            android:paddingRight="20dp">
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -400,62 +397,174 @@
             </TableLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/lblVacunas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
+            android:text="@string/medicamentos"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="RtlSymmetry" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="20dp"
+            android:paddingRight="20dp">
+
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="match_parent">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtOtrosMedicamentos"
-                    android:layout_width="401dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:gravity="start|top"
-                    android:hint="@string/otrosMedicamentos"
-                    android:inputType="textMultiLine"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="10dp"
-                    android:textSize="12sp"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="10dp" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <CheckBox
+                        android:id="@+id/cbxMoquillo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/moquillo"
+                        android:textSize="12sp" />
 
+                    <CheckBox
+                        android:id="@+id/cbxHepatitis"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/hepatitis"
+                        android:textSize="12sp" />
+
+                    <CheckBox
+                        android:id="@+id/cbxParvovirosis"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/parvovirosis"
+                        android:textSize="12sp" />
+
+
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <CheckBox
+                        android:id="@+id/cbxLeptospirosis"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/leptospirosis"
+                        android:textSize="12sp" />
+
+                    <CheckBox
+                        android:id="@+id/cbxTos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/tos"
+                        android:textSize="12sp" />
+                    <CheckBox
+                        android:id="@+id/cbxRabia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rabia"
+                        android:textSize="12sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <CheckBox
+                        android:id="@+id/cbxBabesiosis"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/babesiosis"
+                        android:textSize="12sp" />
+
+                    <CheckBox
+                        android:id="@+id/cbxLyme"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/lyme"
+                        android:textSize="12sp" />
+
+                    <CheckBox
+                        android:id="@+id/cbxLeishmaniasis"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/leishmaniasis"
+                        android:textSize="12sp" />
+
+                </TableRow>
+
+
+            </TableLayout>
 
         </LinearLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtOtrosMedicamentos"
+                android:layout_width="401dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:autofillHints=""
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="@string/otrosMedicamentos"
+                android:inputType="textMultiLine"
+                android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:textSize="12sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
-            android:paddingRight="10dp"
             android:paddingEnd="10dp"
-            android:paddingStart="5dp">
+            android:paddingRight="10dp">
 
             <TextView
                 android:id="@+id/lblObservacionGeneral"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/observacionGeneral"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingStart="5dp"
             android:paddingLeft="5dp"
-            tools:ignore="RtlSymmetry"
-            android:paddingStart="5dp">
+            tools:ignore="RtlSymmetry">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -464,8 +573,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="219dp"
-                    android:layout_height="50dp"
-                    >
+                    android:layout_height="50dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtTiempo"
@@ -474,10 +582,10 @@
                         android:autofillHints=""
                         android:hint="@string/tiempo"
                         android:inputType="textMultiLine"
+                        android:paddingStart="5dp"
                         android:paddingLeft="5dp"
                         android:textSize="12sp"
-                        tools:ignore="RtlSymmetry"
-                        android:paddingStart="5dp" />
+                        tools:ignore="RtlSymmetry" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -498,8 +606,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/eTMLTObservaciones"
@@ -510,12 +617,12 @@
                         android:hint="@string/observacionGeneral"
                         android:inputType="textMultiLine"
                         android:orientation="horizontal"
+                        android:paddingStart="5dp"
                         android:paddingLeft="5dp"
                         android:paddingTop="10dp"
+                        android:paddingEnd="10dp"
                         android:paddingRight="10dp"
-                        android:textSize="12sp"
-                        android:paddingStart="5dp"
-                        android:paddingEnd="10dp" />
+                        android:textSize="12sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -546,11 +653,11 @@
                 android:layout_width="196dp"
                 android:layout_height="match_parent"
                 android:drawablePadding="8dp"
+                android:paddingStart="5dp"
                 android:paddingLeft="5dp"
                 android:text="@string/guardar"
                 android:textSize="16sp"
-                tools:ignore="RtlSymmetry"
-                android:paddingStart="5dp" />
+                tools:ignore="RtlSymmetry" />
 
             <Button
                 android:id="@+id/btnCancelar"
